# Task-Anchor-MCP

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  SECURITY.md
.claude/: CLAUDE.md  settings.local.json
.claude/skills/task-anchor/: DRIFT_HISTORY.json  PARKED.md  SESSION.json  SESSION_LOG.md  SKILL.md  STREAK.json
.claude/skills/task-anchor/references/: drift-patterns.md  redirect.md  session-resume.md
.cursor/rules/: task-anchor.mdc
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.windsurf/rules/: task-anchor.md
mcp-server/: pyproject.toml
mcp-server/pytest-cache-files-opdgy4cl/v/cache/: nodeids
mcp-server/task_anchor/: __init__.py  config.py  drift.py  flow.py  handlers.py  handlers_session.py  helpers.py  messages.py  messages_core.py  messages_session.py  models.py  server.py  storage.py  streak.py  tone.py  tools.py
mcp-server/tests/: conftest.py  test_drift.py  test_handlers.py  test_handlers_session.py  test_models.py  test_server.py  test_tone_flow.py
